--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <h1>Jakub´s portfolio </h1>
     <h2>I am a web developer</h2>
     <hr>
-    <h3><a href="./public/Bithday invite project.html"> Movie ranking project</a></h3>
+    <h3><a href="./public/Movie ranking project.html"> Movie ranking project</a></h3>
     <a href="./public/Movie ranking project.html"><img src="./assets/images/movieranking.PNG" height="250" /></a>
     <h3><a href="./public/Bithday invite project.html">Bithday invite project</a></h3>
     <a href="./public/Bithday invite project.html"><img src="./assets/images/bdayinvite.PNG" height="280" /></a>
